# client_server

./: Makefile
.github/workflows/: build.yml
APPS/FILE_CREATOR_APP/: file_creator.c
APPS/FILE_SENDER_SERVER_APP/: file_sender_server.c
BUDDY_ALLOCATOR/: CMakeLists.txt  README.md
BUDDY_ALLOCATOR/include/: buddy_allocator.h
BUDDY_ALLOCATOR/src/: buddy_allocator.c
BUDDY_ALLOCATOR/tests/: buddy_allocator.cpp
CLIENTS_MANAGER/include/: client_mngr.h
CLIENTS_MANAGER/src/: client_mngr.c
CLIENTS_PORTS_DATA/: CMakeLists.txt
CLIENTS_PORTS_DATA/include/: id_pool.h
CLIENTS_PORTS_DATA/src/: id_pool.c
CLIENTS_PORTS_DATA/tests/: id_pool_test.cpp
CLIENT_SERVER/: CMakeLists.txt  main.c  net_client.c  net_client.h  net_common.h  net_server.c  net_server.h
CLIENT_SERVER/include/: net_client.h  net_infra.h  net_server.h  ram_file_ctrl.h
CLIENT_SERVER/src/: net_client.c  net_infra.c  net_server.c  ram_file_ctrl.c
CLIENT_SERVER/tests/: test_ram_file_ctrl.cpp  test_udp_client_server.cpp  test_udp_server.cpp
FILE_CREATOR/: file_creator.c
FILE_SENDER_CLIENT_APP/: file_sender_client.c
FILE_SENDER_SERVER_APP/: file_sender_server.c
FILE_TRANSFER_INFRA/: file_transfer_protocol.h
INFRA/: CMakeLists.txt
INFRA/include/: common_defs.h  id_pool.h  infra_log.h
INFRA/src/: id_pool.c  infra_log.c
RECIVING_FILE_APP/: file_sender_server.c
SENDING_FILE_APP/: file_sender_client.c
STACK/: stack.c
STORAGE_MANAGER/: CMakeLists.txt
STORAGE_MANAGER/include/: store_mngr.h
STORAGE_MANAGER/src/: store_mngr.c
STORAGE_MANAGER/tests/: store_mngr.cpp
